# fastapi-htmx-template

./: Dockerfile  README.md  log.py  pyproject.toml
src/: config.py  main.py
src/auth/: router.py  security.py
templates/: bar.html  base.html  index.html
